# GhostClip

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: android-build.yml  android-spike.yml  deploy-site.yml  mac-tauri.yml  release.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  ghostclip.keystore
android/app/src/main/: AndroidManifest.xml
design/: ghostclip-landing.pen  ghostclip-ui.pen
mac/src/: app.js  icons.js  index.html  styles.css
mac/src-tauri/: Cargo.toml  tauri.conf.json
mac/src-tauri/capabilities/: default.json
mac/src-tauri/icons/: dmg_background.html  icon.icns
mac/src-tauri/src/: clipboard.rs  cloud_client.rs  hash_pool.rs  lib.rs  main.rs  mdns.rs  net_monitor.rs  network.rs  pairing.rs  presence.rs  settings.rs  ws_server.rs
openspec/changes/cf-web-analytics/: design.md  tasks.md
openspec/changes/ghostclip-mvp/: design.md  proposal.md  tasks.md
openspec/changes/lan-qr-pairing/: design.md  tasks.md
openspec/changes/landing-page/: tasks.md
openspec/changes/ui-alignment/: design.md
site/: astro.config.mjs  package-lock.json  package.json
site/src/components/: Download.astro  Footer.astro  Hero.astro  LucideIcon.astro  Nav.astro  PainPoints.astro  Philosophy.astro  Preview.astro  QuickStart.astro  Solution.astro  SyncMethods.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
specs/: chat-with-gemini-跨端复制粘贴工具设计.md
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
(+79 files in other folders)
