[package]
name = "ghostclip"
version = "0.1.0"
description = "GhostClip - Android <-> Mac clipboard sync"
authors = ["xkcoding"]
edition = "2021"

[lib]
name = "ghostclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
hex = "0.4"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { version = "0.12", features = ["json"] }
mdns-sd = "0.12"
hostname = "0.4"
tauri-plugin-notification = "2"
dirs = "6"
